WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56944
[Qt] "Unwavering" HTML5 game freezes the web page.
https://bugs.webkit.org/show_bug.cgi?id=56944
Summary
[Qt] "Unwavering" HTML5 game freezes the web page.
Andreas Kling
Reported
2011-03-23 11:43:47 PDT
When using the canvas getImageData() API on Qt's raster graphics system, each call causes a deep-copy of the underlying pixels.
Attachments
Proposed patch
(3.57 KB, patch)
2011-03-23 11:46 PDT
,
Andreas Kling
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-03-23 11:46:18 PDT
Created
attachment 86656
[details]
Proposed patch
Andreas Kling
Comment 2
2011-03-23 11:47:01 PDT
Comment on
attachment 86656
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86656&action=review
> Source/WebCore/platform/graphics/qt/ImageBufferQt.cpp:91 > + QPaintDevice* oldPaintDevice = m_pixmap.paintEngine()->paintDevice();
s/m_pixmap.paintEngine()/paintEngine/
Kenneth Rohde Christiansen
Comment 3
2011-03-23 11:50:16 PDT
Comment on
attachment 86656
[details]
Proposed patch Seems fine with me with your other fix
Kenneth Rohde Christiansen
Comment 4
2011-03-23 11:52:19 PDT
Comment on
attachment 86656
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86656&action=review
>> Source/WebCore/platform/graphics/qt/ImageBufferQt.cpp:91 >> + QPaintDevice* oldPaintDevice = m_pixmap.paintEngine()->paintDevice(); > > s/m_pixmap.paintEngine()/paintEngine/
It is not really old thought :-) maybe currentPaintDevice?
Andreas Kling
Comment 5
2011-03-23 12:35:11 PDT
Committed
r81793
: <
http://trac.webkit.org/changeset/81793
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug