2011-03-23  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] "Unwavering" HTML5 game freezes the web page.
        https://bugs.webkit.org/show_bug.cgi?id=56944

        For canvas's getImageData() API, we don't want to make a deep-copy of
        the pixels, which is the case on Qt's "raster" graphics system.

        To work around this, we trick QPixmap::toImage() into giving us the
        QPixmap's backing QImage by temporarily pointing the paint engine to
        a null paint device.

        * platform/graphics/qt/ImageBufferData.h:
        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::ImageBufferData::toQImage): Added, returns the
        ImageBufferData as a QImage, avoiding a backend deep-copy if possible.
        (WebCore::ImageBuffer::platformTransformColorSpace):
        (WebCore::getImageData):


Canonical link: https://commits.webkit.org/71617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81793 268f45cc-cd09-0410-ab3c-d52691b4dbfc